[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dotmac-captive-portal"
version = "1.0.0"
description = "Unified Captive Portal Package for DotMac Framework - Guest network management, authentication, billing integration, and portal customization"
authors = [
    {name = "DotMac Development Team", email = "dev@dotmac.com"}
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.12,<4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core web framework
    "fastapi>=0.109.0",
    "starlette>=0.36.3",
    "uvicorn>=0.27.0",

    # Database and ORM
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # Authentication and security
    "pyjwt>=2.8.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
    "cryptography>=42.0.0",

    # Networking and protocols
    "pyrad>=2.4",
    "scapy>=2.5.0",
    "netaddr>=0.10.1",

    # Templating and customization
    "jinja2>=3.1.3",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # Utilities
    "structlog>=23.2.0",
    "python-dateutil>=2.8.2",
    "qrcode>=7.4.2",
    "pillow>=10.2.0",

    # Monitoring and metrics
    "prometheus-client>=0.19.0",

    # Payment processing
    "stripe>=7.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://dotmac.com/captive-portal"
Documentation = "https://docs.dotmac.com/captive-portal"
Repository = "https://github.com/dotmac/captive-portal"

## Ruff configuration is centralized in the repository root pyproject.toml
## This local section was removed to avoid conflicts and ensure consistency.

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_context = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=dotmac_captive_portal --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["dotmac_captive_portal"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
