[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmac-container-monitoring"
version = "1.0.0"
description = "Container monitoring and health service for DotMac Framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DotMac Framework Team", email = "dev@dotmac.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "docker>=6.0.0",
    "psutil>=5.9.0",
    "asyncio-mqtt>=0.13.0",
    "pydantic>=1.10.0",
    "httpx>=0.24.0",
    "sqlalchemy>=1.4.0",
    "redis>=4.3.0",
    "prometheus-client>=0.14.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dotmac_shared.container_monitoring*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
