[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmac-database-init"
version = "1.0.0"
description = "Database initialization and schema management for multi-tenant applications"
readme = "README.md"
authors = [
    { name = "DotMac Framework Team" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "database",
    "schema",
    "migrations",
    "initialization",
    "multi-tenant"
]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.10.0",
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
]

postgres = [
    "asyncpg>=0.28.0",
    "psycopg2-binary>=2.9.0",
]

mysql = [
    "aiomysql>=0.1.1",
    "pymysql>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dotmac-framework/database-init"
Documentation = "https://dotmac-database-init.readthedocs.io"
Repository = "https://github.com/dotmac-framework/database-init.git"
Issues = "https://github.com/dotmac-framework/database-init/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dotmac_shared.database_init*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=dotmac_shared.database_init",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["dotmac_shared/database_init"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
