[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmac-events"
version = "1.0.0"
description = "Event-driven architecture toolkit for microservices"
readme = "README.md"
authors = [
    { name = "DotMac Framework Team" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = [
    "events",
    "messaging",
    "microservices",
    "async",
    "event-driven"
]
requires-python = ">=3.8"
dependencies = [
    "aioredis>=2.0.0",
    "aiokafka>=0.8.0",
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

testing = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
]

kafka = [
    "aiokafka>=0.8.0",
    "kafka-python>=2.0.0",
]

redis = [
    "aioredis>=2.0.0",
    "redis>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/dotmac-framework/events"
Documentation = "https://dotmac-events.readthedocs.io"
Repository = "https://github.com/dotmac-framework/events.git"
Issues = "https://github.com/dotmac-framework/events/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dotmac_shared.events*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=dotmac_shared.events",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["dotmac_shared/events"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
